--- a/Index/二叉树.md
+++ b/Index/二叉树.md
@@ -1,7 +1,12 @@
 | 题目                                                         | 题解                                                         | 难度 | 推荐指数 |
 | ------------------------------------------------------------ | ------------------------------------------------------------ | ---- | -------- |
 | [95. 不同的二叉搜索树 II](https://leetcode.cn/problems/unique-binary-search-trees-ii/) | [LeetCode 题解链接](https://www.acoier.com/2022/12/09/95.%20%E4%B8%8D%E5%90%8C%E7%9A%84%E4%BA%8C%E5%8F%89%E6%90%9C%E7%B4%A2%E6%A0%91%20II%EF%BC%88%E4%B8%AD%E7%AD%89%EF%BC%89/) | 中等 | 🤩🤩🤩🤩     |
+| [96. 不同的二叉搜索树](https://leetcode.cn/problems/unique-binary-search-trees/) | [LeetCode 题解链接](https://leetcode.cn/problems/unique-binary-search-trees/solutions/2438266/gong-shui-san-xie-cong-qu-jian-dp-dao-qi-fz5z/) | 中等 | 🤩🤩🤩🤩🤩    |
+| [99. 恢复二叉搜索树](https://leetcode.cn/problems/recover-binary-search-tree/) | [LeetCode 题解链接](https://leetcode.cn/problems/recover-binary-search-tree/solutions/2431878/gong-shui-san-xie-yi-ti-shuang-jie-di-gu-4po4/) | 中等 | 🤩🤩🤩🤩🤩    |
+| [108. 将有序数组转换为二叉搜索树](https://leetcode.cn/problems/convert-sorted-array-to-binary-search-tree/) | [LeetCode 题解链接](https://leetcode.cn/problems/convert-sorted-array-to-binary-search-tree/solutions/2436639/gong-shui-san-xie-jian-dan-di-gui-fen-zh-nzqx/) | 简单 | 🤩🤩🤩🤩     |
+| [109. 有序链表转换二叉搜索树](https://leetcode.cn/problems/convert-sorted-list-to-binary-search-tree/) | [LeetCode 题解链接](https://leetcode.cn/problems/convert-sorted-list-to-binary-search-tree/solutions/2436644/gong-shui-san-xie-jian-dan-di-gui-fen-zh-6t1x/) | 中等 | 🤩🤩🤩🤩     |
 | [113. 路径总和 II](https://leetcode.cn/problems/path-sum-ii/) | [LeetCode 题解链接](https://acoier.com/2022/12/10/113.%20%E8%B7%AF%E5%BE%84%E6%80%BB%E5%92%8C%20II%EF%BC%88%E4%B8%AD%E7%AD%89%EF%BC%89/) | 中等 | 🤩🤩🤩🤩     |
+| [124. 二叉树中的最大路径和](https://leetcode.cn/problems/binary-tree-maximum-path-sum/) | [LeetCode 题解链接](https://leetcode.cn/problems/binary-tree-maximum-path-sum/solutions/2451624/gong-shui-san-xie-jian-dan-di-gui-shu-xi-nlci/) | 困难 | 🤩🤩🤩🤩     |
 | [230. 二叉搜索树中第K小的元素](https://leetcode-cn.com/problems/kth-smallest-element-in-a-bst/) | [LeetCode 题解链接](https://leetcode-cn.com/problems/kth-smallest-element-in-a-bst/solution/gong-shui-san-xie-yi-ti-san-jie-pai-xu-y-8uah/) | 中等 | 🤩🤩🤩🤩     |
 | [235. 二叉搜索树的最近公共祖先](https://leetcode.cn/problems/lowest-common-ancestor-of-a-binary-search-tree/) | [LeetCode 题解链接](https://leetcode.cn/problems/lowest-common-ancestor-of-a-binary-search-tree/solutions/2402117/gong-shui-san-xie-yun-yong-dfs-qiu-jie-l-n3jh/) | 中等 | 🤩🤩🤩🤩     |
 | [236. 二叉树的最近公共祖先](https://leetcode.cn/problems/lowest-common-ancestor-of-a-binary-tree/) | [LeetCode 题解链接](https://leetcode.cn/problems/lowest-common-ancestor-of-a-binary-tree/solutions/2402113/gong-shui-san-xie-yun-yong-dfs-qiu-jie-l-htd9/) | 中等 | 🤩🤩🤩🤩     |
@@ -10,6 +15,7 @@
 | [437. 路径总和 III](https://leetcode-cn.com/problems/path-sum-iii/) | [LeetCode 题解链接](https://leetcode-cn.com/problems/path-sum-iii/solution/gong-shui-san-xie-yi-ti-shuang-jie-dfs-q-usa7/) | 中等 | 🤩🤩🤩🤩     |
 | [449. 序列化和反序列化二叉搜索树](https://leetcode.cn/problems/serialize-and-deserialize-bst/) | [LeetCode 题解链接](https://leetcode.cn/problems/serialize-and-deserialize-bst/solution/by-ac_oier-ncwn/) | 中等 | 🤩🤩🤩🤩     |
 | [450. 删除二叉搜索树中的节点](https://leetcode.cn/problems/delete-node-in-a-bst/) | [LeetCode 题解链接](https://leetcode.cn/problems/delete-node-in-a-bst/solution/by-ac_oier-s60a/) | 中等 | 🤩🤩🤩🤩     |
+| [543. 二叉树的直径](https://leetcode.cn/problems/diameter-of-binary-tree/) | [LeetCode 题解链接](https://leetcode.cn/problems/diameter-of-binary-tree/solutions/2454405/gong-shui-san-xie-jian-dan-dfs-yun-yong-vbf27/) | 简单 | 🤩🤩🤩🤩🤩    |
 | [563. 二叉树的坡度](https://leetcode-cn.com/problems/binary-tree-tilt/) | [LeetCode 题解链接](https://leetcode-cn.com/problems/binary-tree-tilt/solution/gong-shui-san-xie-jian-dan-er-cha-shu-di-ekz4/) | 简单 | 🤩🤩🤩🤩     |
 | [606. 根据二叉树创建字符串](https://leetcode-cn.com/problems/construct-string-from-binary-tree/) | [LeetCode 题解链接](https://leetcode-cn.com/problems/construct-string-from-binary-tree/solution/by-ac_oier-i2sk/) | 简单 | 🤩🤩🤩🤩     |
 | [623. 在二叉树中增加一行](https://leetcode.cn/problems/add-one-row-to-tree/) | [LeetCode 题解链接](https://leetcode.cn/problems/add-one-row-to-tree/solution/by-ac_oier-sc34/) | 中等 | 🤩🤩🤩🤩     |
