--- a/Index/回溯算法.md
+++ b/Index/回溯算法.md
@@ -14,5 +14,6 @@
 | [698. 划分为k个相等的子集](https://leetcode.cn/problems/partition-to-k-equal-sum-subsets/) | [LeetCode 题解链接](https://leetcode.cn/problems/partition-to-k-equal-sum-subsets/solution/by-ac_oier-mryw/) | 中等 | 🤩🤩🤩🤩🤩    |
 | [797. 所有可能的路径](https://leetcode-cn.com/problems/all-paths-from-source-to-target/) | [LeetCode 题解链接](https://leetcode-cn.com/problems/all-paths-from-source-to-target/solution/gong-shui-san-xie-yun-yong-dfs-bao-sou-s-xlz9/) | 中等 | 🤩🤩🤩🤩     |
 | [1219. 黄金矿工](https://leetcode-cn.com/problems/path-with-maximum-gold/) | [LeetCode 题解链接](https://leetcode-cn.com/problems/path-with-maximum-gold/solution/gong-shui-san-xie-hui-su-suan-fa-yun-yon-scxo/) | 中等 | 🤩🤩🤩🤩🤩    |
+| [2698. 求一个整数的惩罚数](https://leetcode.cn/problems/find-the-punishment-number-of-an-integer/) | [LeetCode 题解链接](https://leetcode.cn/problems/find-the-punishment-number-of-an-integer/solutions/2497448/gong-shui-san-xie-jian-dan-di-gui-yun-yo-qdxl/) | 中等 | 🤩🤩🤩🤩🤩    |
 | [剑指 Offer 38. 字符串的排列](https://leetcode-cn.com/problems/zi-fu-chuan-de-pai-lie-lcof/) | [LeetCode 题解链接](https://leetcode-cn.com/problems/zi-fu-chuan-de-pai-lie-lcof/solution/gong-shui-san-xie-tong-yong-shi-xian-qu-4jbkj/) | 中等 | 🤩🤩🤩🤩     |
 
