--- a/LeetCode/1-10/10. 正则表达式匹配（困难）.md
+++ b/LeetCode/1-10/10. 正则表达式匹配（困难）.md
@@ -69,16 +69,16 @@ Tag : 「动态规划」
 * 状态转移：也就是我们要考虑 `f(i,j)` 如何求得，前面说到了 `p` 有三种字符，所以这里的状态转移也要分三种情况讨论：
   
   1. `p[j]` 为普通字符：匹配的条件是前面的字符匹配，同时 `s` 中的第 `i` 个字符和 `p` 中的第 `j` 位相同。 即 `f(i,j) = f(i - 1, j - 1) && s[i] == p[j]` 。
-  2. `p[j]` 为 `'.'`：匹配的条件是前面的字符匹配， `s` 中的第 `i` 个字符可以是任意字符。即 `f(i,j) = f(i - 1, j - 1) && p[j] == '.'`。
-  3. `p[j]` 为 `'*'`：读得 `p[j - 1]` 的字符，例如为字符 a。 然后根据 `a*` 实际匹配 `s` 中 `a` 的个数是 0 个、1 个、2 个 ...
   
-      3.1. 当匹配为 0 个：`f(i,j) = f(i, j - 2)`
-      
-      3.2. 当匹配为 1 个：`f(i,j) = f(i - 1, j - 2) && (s[i] == p[j - 1] || p[j - 1] == '.')`
-      
-      3.3. 当匹配为 2 个：`f(i,j) = f(i - 2, j - 2) && ((s[i] == p[j - 1] && s[i - 1] == p[j - 1]) || p[j] == '.')`
-      
-      ...
+  2. `p[j]` 为 `'.'`：匹配的条件是前面的字符匹配， `s` 中的第 `i` 个字符可以是任意字符。即 `f(i,j) = f(i - 1, j - 1) && p[j] == '.'`。
+	
+	3. `p[j]` 为 `'*'`：读得 `p[j - 1]` 的字符，例如为字符 a。 然后根据 `a*` 实际匹配 `s` 中 `a` 的个数是 0 个、1 个、2 个 ...
+	
+    3.1. 当匹配为 0 个：`f(i,j) = f(i, j - 2)`
+
+    3.2. 当匹配为 1 个：`f(i,j) = f(i - 1, j - 2) && (s[i] == p[j - 1] || p[j - 1] == '.')`
+
+    3.3. 当匹配为 2 个：`f(i,j) = f(i - 2, j - 2) && ((s[i] == p[j - 1] && s[i - 1] == p[j - 1]) || p[j] == '.')`
 
 **我们知道，通过「枚举」来确定 `*` 到底匹配多少个 `a` 这样的做法，算法复杂度是很高的。**
 
@@ -102,7 +102,7 @@ class Solution {
         for (int i = 0; i <= n; i++) {
             for (int j = 1; j <= m; j++) {
                 // 如果下一个字符是 '*'，则代表当前字符不能被单独使用，跳过
-                if (j + 1 <= m && p[j + 1] == '*') continue;
+                if (j + 1 <= m && p[j + 1] == '*' && p[j] != '*') continue;
                 
                 // 对应了 p[j] 为普通字符和 '.' 的两种情况
                 if (i - 1 >= 0 && p[j] != '*') {
