--- a/LeetCode/201-210/209. 长度最小的子数组（中等）.md
+++ b/LeetCode/201-210/209. 长度最小的子数组（中等）.md
@@ -2,9 +2,7 @@
 
 这是 LeetCode 上的 **[209. 长度最小的子数组](https://leetcode-cn.com/problems/implement-trie-prefix-tree/solution/gong-shui-san-xie-yi-ti-shuang-jie-er-we-esm9/)** ，难度为 **中等**。
 
-Tag : 「前缀和」、「二分」
-
-
+Tag : 「前缀和」、「二分」、「滑动窗口」
 
 给定一个含有 `n` 个正整数的数组和一个正整数 `target`。
 
@@ -69,6 +67,36 @@ class Solution {
 ```
 * 时间复杂度：预处理前缀和数组的复杂度为 $O(n)$，遍历前缀和数组统计答案复杂度为 $O(n\log{n})$。整体复杂度为 $O(n\log{n})$
 * 空间复杂度：$O(n)$
+
+---
+
+### 滑动窗口
+
+另外一个，复杂度比 $O(n\log{n})$ 更低的做法，是滑动窗口。
+
+在一次遍历过程中，使用 `j` 和 `i` 分别代表窗口的左右端点，变量 `c` 用于记录窗口内的数值总和。
+
+遍历过程其实就是右端点 `i` 不断右移的过程，每次将当前右端点 `i` 的值累加到 `c` 上，若累加后，左端点右移仍能满足「总和大于等于 `t`」的要求，那么我们则让左端点 `j` 右移。
+
+如此一来，我们便得到了每个右端点 `i` 固定时，下标最大的合法左端点 `j`（若有）。所有合法窗口长度的最小值即是答案。
+
+
+代码：
+```Java
+class Solution {
+    public int minSubArrayLen(int t, int[] nums) {
+        int n = nums.length, ans = n + 10;
+        for (int i = 0, j = 0, c = 0; i < n; i++) {
+            c += nums[i];
+            while (j < i && c - nums[j] >= t) c -= nums[j++];
+            if (c >= t) ans = Math.min(ans, i - j + 1);
+        }
+        return ans > n ? 0 : ans;
+    }
+}
+```
+* 时间复杂度：$O(n)$
+* 空间复杂度：$O(1)$
 
 ---
 
