--- a/LeetCode/301-310/310. 最小高度树（中等）.md
+++ b/LeetCode/301-310/310. 最小高度树（中等）.md
@@ -60,13 +60,23 @@ Tag : 「树形 DP」、「DFS」、「动态规划」
 
 对于当前处理到的节点 `u` 而言，我们根据是否考虑「从 `fa` 到 `u` 的出边」将其分为「往上」和「往下」两个方向。
 
-假设我们可以通过 `DFS` 预处理出 $f$ 数组和 $g$ 数组，**其中 $f[u]$ 代表在以 $0$ 号点为根节点的树中，以 `u` 节点为子树根节点时，往下的最大高度；$g[u]$ 代表在以 $0$ 号点为根节点的树中，以 `u` 节点为子节点时，往上的最大高度**。那么最终以 `u` 为根节点的最大高度为 $\max(f[u], g[u])$。
+假设我们可以通过 `DFS` 预处理出 $f$ 数组和 $g$ 数组：
 
-其中 $f[u]$ 只需要简单的 `DFS` 即可处理出来，但对于 $g[u]$ 而言，其同样包含「往上」和「往下」两部分，对于往上的部分 $\max(g[u], g[fa] + 1)$；而对于往下的部分，我们需要考虑「`fa` 节点往下的最大值 $f[fa]$」是否由 `u` 节点参与而来进行分情况讨论，如果 $f[fa]$ 本身不由 `u` 参与，那么 $g[u]$ 应当是 `fa` 节点往下的最大值 $+1$ 而来（$+1$ 代表加上 `fa` 到 `u` 的边）；如果本身 `fa` 往下的最大值由 `u` 节点参与，此时应当使用 `fa` 往下的次大值 $+1$ 来更新 $g[u]$。
+* $f[u]$ 代表在以 $0$ 号点为根节点的树中，以 `u` 节点为子树根节点时，往下的最大高度
+* $g[u]$ 代表在以 $0$ 号点为根节点的树中，以 `u` 节点为子节点时，往上的最大高度
+
+那么最终以 `u` 为根节点的最大高度为 $\max(f[u], g[u])$。
+
+$f[u]$ 只需要简单的 `DFS` 即可处理出来。对于 $g[u]$ 而言，其同样包含「往上」和「往下」两部分：
+
+* 对于经过 `fa` 后接着往上的部分有 $g[fa] + 1$
+* 对于经过 `fa` 后转而往下的部分，我们需要考虑「`fa` 节点往下的最大值 $f[fa]$」是否由 `u` 节点参与而来进行分情况讨论：
+  * 如果 $f[fa]$ 本身不由 `u` 参与，那么 $g[u]$ 应当是 `fa` 节点往下的最大值 $+1$ 而来（$+1$ 代表加上 `fa` 到 `u` 的边）
+  * 如果本身 `fa` 往下的最大值由 `u` 节点参与，此时应当使用 `fa` 往下的次大值 $+1$ 来更新 $g[u]$
 
 因此我们需要对 $f$ 数组进行拆分，拆分为记录「最大值的 $f1$ 数组」和记录「次大值的 $f2$ 数组（注意这里的次大值是非严格的次大值）」，同时使用 $p$ 数组记录下取得 $f1[u]$ 时 `u` 的子节点 `j` 为何值。 
 
-另外实现上，在处理「往上」方向的 `DFS` 时，为避免对 `fa` 节点为空的处理，我们可以将「用 `fa` 来更新 `u`」调整为「用 `u` 来更新 `j`」。
+实现上，在处理「往上」方向的 `DFS` 时，为避免对 `fa` 节点为空的处理，我们可以将「用 `fa` 来更新 `u`」调整为「用 `u` 来更新 `j`」。
 
 代码：
 ```Java
