--- a/LeetCode/661-670/664. 奇怪的打印机（困难）.md
+++ b/LeetCode/661-670/664. 奇怪的打印机（困难）.md
@@ -11,7 +11,7 @@ Tag : 「区间 DP」
 * 打印机每次只能打印由 同一个字符 组成的序列。
 * 每次可以在任意起始和结束位置打印新字符，并且会覆盖掉原来已有的字符。
 
-给你一个字符串 s ，你的任务是计算这个打印机打印它需要的最少打印次数。
+给你一个字符串 `s`，你的任务是计算这个打印机打印它需要的最少打印次数。
 
 
 
@@ -33,8 +33,8 @@ Tag : 「区间 DP」
 ```
 
 提示：
-* 1 <= s.length <= 100
-* s 由小写英文字母组成
+* $1 <= s.length <= 100$
+* `s` 由小写英文字母组成
 
 ---
 
