--- a/LeetCode/91-100/95. 不同的二叉搜索树 II（中等）.md
+++ b/LeetCode/91-100/95. 不同的二叉搜索树 II（中等）.md
@@ -1,15 +1,18 @@
 ### 题目描述
 
-这是 LeetCode 上的 **[95. 不同的二叉搜索树 II](https://www.acoier.com/2022/12/09/95.%20%E4%B8%8D%E5%90%8C%E7%9A%84%E4%BA%8C%E5%8F%89%E6%90%9C%E7%B4%A2%E6%A0%91%20II%EF%BC%88%E4%B8%AD%E7%AD%89%EF%BC%89/)** ，难度为 **中等**。
+这是 LeetCode 上的 **[95. 不同的二叉搜索树 II](https://leetcode.cn/problems/unique-binary-search-trees-ii/solutions/2438263/gong-shui-san-xie-chang-gui-er-cha-shu-b-h4sw/)** ，难度为 **中等**。
 
 Tag : 「树」、「二叉搜索树」、「BST」、「DFS」、「递归」、「爆搜」
 
 
 
-给你一个整数 `n`，请你生成并返回所有由 `n` 个节点组成且节点值从 `1` 到 `n` 互不相同的不同 二叉搜索树 。可以按 任意顺序 返回答案。
+给你一个整数 `n`，请你生成并返回所有由 `n` 个节点组成且节点值从 `1` 到 `n` 互不相同的不同 二叉搜索树 。
+
+可以按 任意顺序 返回答案。
 
 示例 1：
 ![](https://assets.leetcode.com/uploads/2021/01/18/uniquebstn3.jpg)
+
 ```
 输入：n = 3
 
@@ -87,7 +90,7 @@ function generateTrees(n: number): Array<TreeNode | null> {
 }
 ```
 Python 代码：
-```Python []
+```Python
 class Solution:
     def generateTrees(self, n: int) -> List[Optional[TreeNode]]:
         def dfs(l, r):
