--- a/Index/链表.md
+++ b/Index/链表.md
@@ -10,6 +10,7 @@
 | [83. 删除排序链表中的重复元素](https://leetcode-cn.com/problems/remove-duplicates-from-sorted-list/) | [LeetCode 题解链接](https://leetcode-cn.com/problems/remove-duplicates-from-sorted-list/solution/tong-yong-shan-chu-zhong-fu-jie-dian-lia-101c/) | 简单 | 🤩🤩🤩🤩🤩 |
 | [82. 删除排序链表中的重复元素 II](https://leetcode-cn.com/problems/remove-duplicates-from-sorted-list-ii/) | [LeetCode 题解链接](https://leetcode-cn.com/problems/remove-duplicates-from-sorted-list-ii/solution/tong-yong-shan-chu-zhong-fu-jie-dian-lia-od9g/) | 简单 | 🤩🤩🤩🤩🤩 |
 | [92. 反转链表 II](https://leetcode-cn.com/problems/reverse-linked-list-ii/) | [LeetCode 题解链接](https://leetcode-cn.com/problems/reverse-linked-list-ii/solution/yi-ge-neng-ying-yong-suo-you-lian-biao-t-vjx6/) | 中等 | 🤩🤩🤩 |
+| [117. 填充每个节点的下一个右侧节点指针 II](https://leetcode.cn/problems/populating-next-right-pointers-in-each-node-ii/) | [LeetCode 题解链接](https://leetcode.cn/problems/populating-next-right-pointers-in-each-node-ii/solutions/2510505/gong-shui-san-xie-xiang-xi-tu-jie-o1-kon-d6vg/) | 中等 | 🤩🤩🤩🤩🤩 |
 | [138. 复制带随机指针的链表](https://leetcode-cn.com/problems/copy-list-with-random-pointer/) | [LeetCode 题解链接](https://leetcode-cn.com/problems/copy-list-with-random-pointer/solution/gong-shui-san-xie-yi-ti-shuang-jie-ha-xi-pqek/) | 中等 | 🤩🤩🤩 |
 | [141. 环形链表](https://leetcode.cn/problems/linked-list-cycle/) | [LeetCode 题解链接](https://leetcode.cn/problems/linked-list-cycle/solution/by-ac_oier-lfgr/) | 简单 | 🤩🤩🤩🤩 |
 | [142. 环形链表 II](https://leetcode.cn/problems/linked-list-cycle-ii/) | [LeetCode 题解链接](https://leetcode.cn/problems/linked-list-cycle-ii/solution/by-ac_oier-xw16/) | 中等 | 🤩🤩🤩🤩 |
